centered login form

--- a/src/index.css
+++ b/src/index.css
@@ -31,8 +31,9 @@ a:hover {
 
 body {
   margin: 0;
-  display: grid;
-  place-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   min-height: 100vh;
 }
 
